--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,19 @@ branches:
 notifications:
   email:
     recipients:
-      - xxx@upm.es
+      - luismiguel.ortiz.rozalen@alumnos.upm.es
 script:
   #Test unitario y de integracion con cobertura
   - mvn org.jacoco:jacoco-maven-plugin:prepare-agent verify
   #SONARCLOUD
-  - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=xxx -Dsonar.login=$SONAR
+  - mvn sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=luismoteando -Dsonar.login=$SONAR
 
-#Deploy https://apaw-ep-xxx.herokuapp.com
+#Deploy https://apaw-ep-luismiguel-ortiz.herokuapp.com
 deploy:
   provider: heroku
   api_key:
     secure: $HEROKU
   on:
     branch: master
+  app: apaw-ep-luismiguel-ortiz
 
